add new functions for index page

--- a/css/less/stateGrid.businessHall.less
+++ b/css/less/stateGrid.businessHall.less
@@ -14,6 +14,7 @@
 //组件
 @import 'stateGrid.form.less';					//bootstrap表单
 @import 'stateGrid.table.less';					//bootstrap表格
+@import 'stateGrid.newsMarquee.less';			//消息滚动
 
 //页面
 @import "stateGrid.index.less";					//首页
