--- a/css/less/stateGrid.index.less
+++ b/css/less/stateGrid.index.less
@@ -143,7 +143,8 @@
 	}
 	.notice { 
 		line-height: 2;
-		padding: 0.1rem @d15;
+		margin: 0.1rem @d15;
+		position: relative;
 		a { 
 			display: block;
 			padding-left: 0.26rem;
