--- a/css/less/stateGrid.businessHall.less
+++ b/css/less/stateGrid.businessHall.less
@@ -31,7 +31,9 @@
 @import "stateGrid.myServer2.less";				//我的网格员
 @import "stateGrid.myBill.less";				//我的账单
 @import "stateGrid.seekHelp.less";				//我要求助
-@import "stateGrid.powerAnalysis.less";				//用电分析
+@import "stateGrid.powerAnalysis.less";			//用电分析
 @import "stateGrid.bindBill.less";				//账号绑定
+@import "stateGrid.realtimePower.less";			//实时电量
+@import "stateGrid.elecInfo.less";				//
 
 @import "stateGrid.media.less";					//全局媒介查询
