--- a/css/less/stateGrid.common.less
+++ b/css/less/stateGrid.common.less
@@ -1,3 +1,9 @@
+.container { 
+	padding-right: @d15;
+	padding-left: @d15;
+	margin-right: auto;
+	margin-left: auto;
+}
 .margin-10 { 
 	margin-top: 0.1rem!important;
 }
