--- a/css/less/stateGrid.media.less
+++ b/css/less/stateGrid.media.less
@@ -1,8 +1,8 @@
-@media (min-width: 768px) { 
-	html { 
-		font-size: 150px;
-	}
-}
+//@media (min-width: 768px) { 
+	//html { 
+		//font-size: 120px;
+	//}
+//}
 @media (min-width: 640px) { 
 	.form-control { 
 		width: 50%!important;
